--- a/k8c1.md
+++ b/k8c1.md
@@ -2,7 +2,7 @@
 
 Set the keyboard to Windows mode via the side switch
 
-Use Fn + X + L (hold for 4 seconds) to set the function key row to “Function” mode. (usually all that’s necessary on Windows)
+Use `Fn + X + L` (hold for 4 seconds) to set the function key row to “Function” mode. (usually all that’s necessary on Windows)
 
 ```bash
 echo 0 | sudo tee /sys/module/hid_apple/parameters/fnmode
